src/test/ui/terminal-width/whitespace-trimming.rs
// ignore-tidy-length 

fn main() {
                                                                                                                                                                                    let _: () = 42;
//~^ ERROR mismatched types
}
